# learn_ROS

./: README.md
ROS_Course_Assignments_2024fall/src/catch_fruits/: CMakeLists.txt  package.xml
ROS_Course_Assignments_2024fall/src/catch_fruits/launch/: catch.launch
ROS_Course_Assignments_2024fall/src/catch_fruits/scripts/: demo.py
ROS_Course_Assignments_2024fall/src/change_pen_turtle/: package.xml
ROS_Course_Assignments_2024fall/src/use_turtlebot3/: package.xml
ROS_Course_Notes/: 2.Ubuntu安装和使用.md  3.安装ROS系统.md  4.从ROS社区和GitHub获取软件包.md
ROS_Practical_Exercises_2024Fall/: README.md
ROS_Practical_Exercises_2024Fall/src/change_pen_turtle/: CMakeLists.txt
ROS_Practical_Exercises_2024Fall/src/my_moveit/: .setup_assistant
ROS_Practical_Exercises_2024Fall/src/my_urdf/: CMakeLists.txt  package.xml
ROS_Practical_Exercises_2024Fall/src/use_serv/: CMakeLists.txt  package.xml
ROS_Practical_Exercises_2024Fall/src/use_topic/: CMakeLists.txt
ROS机器人操作系统基础与实战作业/: README.md
ROS机器人操作系统基础与实战作业/src/joy_turtle/: CMakeLists.txt  package.xml
ROS机器人操作系统基础与实战作业/src/learning_tf2_1/: CMakeLists.txt  package.xml
ROS机器人操作系统基础与实战作业/src/my_moveit/: package.xml
ROS机器人操作系统基础与实战作业/src/use_topic/: package.xml
ROS机器人操作系统基础与实战作业/src/use_topic/launch/: hwk1.launch
ROS机器人操作系统基础与实战作业/src/use_topic/msg/: MyInfo.msg
ROS机器人操作系统基础与实战作业/src/use_topic/scripts/: talker.py  talker_gripper.py
ROS机器人操作系统基础与实战作业/src/use_turtlebot3/: CMakeLists.txt
note/: 1.ROS简介.md  2.Ubuntu安装和使用.md
src/eye/: contour_centers.npy  eye.py  tag.py
新建文件夹/: README.md
(+50 files in other folders)
