<?xml version="1.0"?>
<package format="2">
  <name>use_topic</name>
  <version>0.0.0</version>
  <description>The use_topic package</description>

  <maintainer email="majiale@todo.todo">majiale</maintainer>

  <license>TODO</license>

  <!-- 构建系统依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <build_depend>message_generation</build_depend> <!-- 构建确保msg文件能被转换为C++、Python和其他语言的源代码的依赖 -->
  
  


  <!-- 运行时依赖 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend> <!-- 在运行时确保msg文件能被转换为C++、Python和其他语言的源代码的依赖 -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
